# CuboidConstruct

./: CMakeLists.txt
src/: main.cpp
